Cleans CSS cruft, txtchange, CSSfix

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Rich Werden
-description: "A simple site for Rich Werden to write about code and archive some completed projects for future reference..." # 'Code Conquerer'
+description: "A simple site for Rich to write about code and archive some completed projects for future reference..." # 'Code Conquerer'
 url: 'https://github.com/r-i-c-h/r-i-c-h.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 # google_analytics: 'UA-XXXXXX-X'
