--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# "bundle exec jekyll serve". If you change this file, please restart the server process.
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
 # Accessed via {{ site.title }}, {{ site.email }}, and so on.
@@ -7,13 +7,13 @@
 # in the templates via {{ site.myvariable }}.
 title: Rich Werden
 description: "A simple site for Rich to write about code and archive some completed projects for future reference..."
-url: "https://github.com/r-i-c-h/r-i-c-h.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-baseurl: "" # the subpath of your site, e.g. /blog
-# google_analytics: "UA-110851713-1"
-# disqus_shortname: "your-disqus-name"
+url: 'https://github.com/r-i-c-h/r-i-c-h.github.io' # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog 
+# google_analytics: 'UA-110851713-1'
+# disqus_shortname: 'your-disqus-name'
 
 author:
-  name: "Rich Werden"
+  name: 'Rich Werden'
   email: rich_@t_richwerden.com
   twitter_username: the_riz
   github_username:  r-i-c-h
@@ -21,10 +21,10 @@ author:
 
 defaults:
   - scope:
-      path: "
-      type: "posts"
+      path: ''
+      type: 'posts'
     values:
-        layout: "post"
+        layout: 'post'
 
 # Build settings
 include: ["_exproj"]
@@ -32,20 +32,21 @@ destination: _site
 paginate: 10
 permalink: /:year/:title.html
 markdown: kramdown
-highlighter: rouge
-
 kramdown:
-  input: GFM # use Github Flavored Markdown
-  hard_wrap: false  # do not replace newlines by <br>s
+  # use Github Flavored Markdown
+  input: GFM 
+  # do not replace newlines by <br>s
+  hard_wrap: false
+highlighter: rouge
 
 sass:
     sass_dir: _sass
     style: compressed
 
 # The following are for the jekyll-livereload gem setup to use it as a default.
-# If you don"t want to use the livereload just delete the next two lines
-# livereload: true
-# reload_port: 5678
+# If you don't want to use the livereload just delete the next two lines
+livereload: true
+reload_port: 5678
 
 plugins:
   - jekyll-paginate
